# orc

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.py  yang2json.sh
.github/workflows/: dockerimage.yml
docker/: Dockerfile  build.sh
orc/: Makefile
package/: Makefile
src/: cgi.c  cgi.h  cmd.c  cmd.h  error.c  error.h  http.c  http.h  rectconf-uci.c  restconf-json.c  restconf-json.h  restconf-method.c  restconf-method.h  restconf-uci.h  restconf-verify.c  restconf-verify.h  restconf.c  restconf.h  url.c  url.h  util.c  util.h  vector.h  yang-util.c  yang-util.h  yang-verify.c  yang-verify.h  yang.h
src/uci/: cmd.c  cmd.h  methods.c  methods.h  uci-get.c  uci-get.h  uci-util.c  uci-util.h
test/: POST-example1.json  POST-example2.json  POST-example3.json  POST-identical-keys.json  POST-keys-missing.json  POST-list-item.json  POST-list-subitem.json  PUT-nested-state-top.json  PUT-op-list.json  add-student.json  common.yaml  root.json  test.py  test_restconf.tavern.yml
test/GET/: root-valid-extended.yaml
test/POST/: duplicate-keys.yaml  new-item.yaml  valid-instructor-item.yaml
test/acceptance/: common.yaml  test.py  test_restconf.tavern.yml
test/acceptance/GET/: root-valid-extended.yaml  root-valid.yaml
test/acceptance/POST/: invalid-semester.yaml  lmapd-valid.json  lmapd-valid.yaml  new-item.yaml  root-valid.yaml  valid-semester.yaml
yang/: ietf-inet-types.yang  ietf-interfaces.yang  ietf-lmap-common.yang  ietf-lmap-control.yang  ietf-netconf-acm.yang  ietf-yang-metadata.yang  ietf-yang-types.yang  lmapd.yang  openwrt-network.yang  openwrt-system.yang  openwrt-uci-extension.yang  restconf-example.json  restconf-example.xml  restconf-example.yang
yang/yin/: ietf-inet-types.yin  ietf-yang-types.yin  openwrt-network.yin  openwrt-system.yin  openwrt-uci-extension.yin  restconf-example.yin
yin/: ietf-inet-types.yin  ietf-lmap-common.yin  ietf-lmap-control.yin  ietf-netconf-acm.yin  ietf-yang-types.yin  lmapd.yin  openwrt-network.yin  openwrt-system.yin  openwrt-uci-extension.yin  restconf-example.yin
yin2json/: yin2json.py
yin2json/template/: yang.h.templ
